[package]
name = "tsuga_linalg"
version = "0.1.0"
authors = ["chrism"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tsuga_linalg"
crate-type = ["rlib","staticlib","cdylib"]

[dependencies]
ocl = "0.19"
ocl-extras = "0.1.1"
ndarray = "0.13"
ndarray-rand = "0.11"
serial_test = "0.4"
